--- a/palette/package.json
+++ b/palette/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@saas-ui/palette",
-  "version": "0.0.1-beta",
-  "main": "index.js",
+  "version": "0.1",
+  "main": "dist/index.js",
   "license": "MIT",
+  "author": "Eelco Wiersma <eelco@appulse.nl>",
+  "private": false,
+  "repository": {
+    "url": "https://github.com/AppulseSoftware/saas-ui"
+  },
   "dependencies": {
     "@chakra-ui/theme": "^1.10.4",
     "@types/chroma-js": "^2.1.3",
@@ -10,6 +15,6 @@
   },
   "scripts": {
     "build": "tsc --build tsconfig.json",
-    "prepublish": "build"
+    "prepare": "yarn build"
   }
 }
