--- a/palette/tsconfig.json
+++ b/palette/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "declaration": true,
     "outDir": "dist"
   },
   "include": ["src/*.ts"],
