--- a/package.json
+++ b/package.json
@@ -2,9 +2,5 @@
   "name": "saas-ui",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "license": "MIT",
-  "workspaces": [
-    "docs",
-    "palette"
-  ]
+  "license": "MIT"
 }
