--- a/palette/package.json
+++ b/palette/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/palette",
-  "version": "0.1.1",
+  "version": "0.2.1",
   "main": "dist/index.js",
   "license": "MIT",
   "author": "Eelco Wiersma <eelco@appulse.nl>",
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@chakra-ui/theme": "^1.10.4",
-    "@types/chroma-js": "^2.1.3",
     "chroma-js": "^2.1.2"
+  },
+  "devDependencies": {
+    "@types/chroma-js": "^2.1.3"
   },
   "scripts": {
     "build": "tsc --build tsconfig.json",
