--- a/website/.gitignore
+++ b/website/.gitignore
@@ -1,8 +1,9 @@
-.# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
-**/node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
@@ -10,16 +11,13 @@
 # next.js
 /.next/
 /out/
-**/.next/
-**/out/
 
 # production
-/dist
-**/dist
-build/**
+/build
 
 # misc
 .DS_Store
+*.pem
 
 # debug
 npm-debug.log*
@@ -27,7 +25,6 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
 .env.local
 .env.development.local
 .env.test.local
@@ -36,8 +33,6 @@ yarn-error.log*
 # vercel
 .vercel
 
-!.vscode
-
-# turbo
-
-.turbo
+**/public/workbox-*.js
+**/public/sw.js
+**/public/service-worker.js
