--- a/website/package.json
+++ b/website/package.json
@@ -21,7 +21,7 @@
     "@saas-ui/palette": "^0.2.1",
     "@svgr/webpack": "^5.5.0",
     "framer-motion": "^4.1.17",
-    "next": "^11.0.0",
+    "next": "11.1.1",
     "next-mdx-remote": "^3.0.2",
     "next-pwa": "^5.2.21",
     "react": "^17.0.2",
