Initial commit for docs

--- a/website/package.json
+++ b/website/package.json
@@ -8,10 +8,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettify": "prettier --write src"
+    "prettify": "prettier --write src",
+    "gen:theme-typings": "chakra-cli tokens src/styles/theme.ts"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/props-docs": "^1.0.40",
     "@chakra-ui/react": "^1.6.4",
+    "@chakra-ui/skip-nav": "^1.2.1",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "@fontsource/inter": "^4.4.5",
@@ -20,20 +24,30 @@
     "@next/mdx": "^12.0.7",
     "@saas-ui/palette": "^0.2.1",
     "@svgr/webpack": "^5.5.0",
+    "contentlayer": "^0.0.33",
     "framer-motion": "^4.1.17",
-    "next": "11.1.1",
+    "github-slugger": "^1.4.0",
+    "match-sorter": "^6.3.1",
+    "next": "^12.0.7",
+    "next-contentlayer": "^0.0.33",
     "next-mdx-remote": "^3.0.2",
     "next-pwa": "^5.2.21",
+    "next-seo": "^4.28.1",
+    "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.0",
+    "react-live": "^2.3.0",
     "react-transition-group": "^4.4.2",
-    "remark-code-titles": "^0.1.2"
+    "remark-code-titles": "^0.1.2",
+    "remark-emoji": "^3.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-slug": "^7.0.1"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^3.9.2",
+    "@netlify/plugin-nextjs": "^4.0.0-rc.2",
     "@types/react": "^17.0.11",
     "@types/react-transition-group": "^4.4.4",
     "eslint": "^7.28.0",
