--- a/website/package.json
+++ b/website/package.json
@@ -47,13 +47,13 @@
     "remark-slug": "^7.0.1"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.0.0-rc.2",
+    "@netlify/plugin-nextjs": "^4.0.0",
     "@types/react": "^17.0.11",
     "@types/react-transition-group": "^4.4.4",
     "eslint": "^8.2.0",
     "eslint-config-next": "^12.0.7",
     "prettier": "^2.3.2",
     "ts-node": "10.4.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.5.4"
   }
 }
