Manually build contentlayer

--- a/website/package.json
+++ b/website/package.json
@@ -5,11 +5,13 @@
   "author": "Eelco Wiersma <eelco@appulse.nl>",
   "scripts": {
     "dev": "next dev --port 3020",
-    "build": "next build",
+    "build": "yarn contentlayer:build && next build",
     "start": "next start",
     "lint": "next lint",
     "prettify": "prettier --write src",
-    "gen:theme-typings": "chakra-cli tokens src/styles/theme.ts"
+    "gen:theme-typings": "chakra-cli tokens src/styles/theme.ts",
+    "contentlayer:build": "contentlayer build --config ./contentlayer.ts",
+    "contentlayer:fetch": "contentlayer fetch --config ./contentlayer.ts"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
