--- a/website/package.json
+++ b/website/package.json
@@ -5,13 +5,12 @@
   "author": "Eelco Wiersma <eelco@appulse.nl>",
   "scripts": {
     "dev": "next dev --port 3020",
-    "build": "yarn contentlayer:build && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "prettify": "prettier --write src",
     "gen:theme-typings": "chakra-cli tokens src/styles/theme.ts",
-    "contentlayer:build": "contentlayer build --config ./contentlayer.ts",
-    "contentlayer:fetch": "contentlayer fetch --config ./contentlayer.ts"
+    "contentlayer:build": "contentlayer build --config ./contentlayer.ts"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
@@ -23,8 +22,8 @@
     "@fontsource/inter": "^4.4.5",
     "@mapbox/rehype-prism": "^0.7.0",
     "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^12.0.7",
     "@next/bundle-analyzer": "^12.0.7",
+    "@next/mdx": "^12.0.7",
     "@saas-ui/palette": "^0.2.1",
     "@svgr/webpack": "^5.5.0",
     "contentlayer": "^0.0.33",
