--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,7 @@
   "author": "Eelco Wiersma <eelco@appulse.nl>",
   "scripts": {
     "dev": "next dev --port 3020",
-    "build": "next build",
+    "build": "yarn contentlayer:build && next build",
     "start": "next start",
     "lint": "next lint",
     "prettify": "prettier --write src",
@@ -17,23 +17,23 @@
     "@chakra-ui/props-docs": "^1.0.40",
     "@chakra-ui/react": "^1.6.4",
     "@chakra-ui/skip-nav": "^1.2.1",
+    "@chakra-ui/system": "^1.8.3",
     "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/styled": "^11.6.0",
     "@fontsource/inter": "^4.4.5",
     "@mapbox/rehype-prism": "^0.7.0",
     "@mdx-js/loader": "^1.6.22",
     "@next/bundle-analyzer": "^12.0.7",
-    "@next/mdx": "^12.0.7",
     "@saas-ui/palette": "^0.2.1",
     "@svgr/webpack": "^5.5.0",
     "contentlayer": "^0.0.33",
+    "date-fns": "^2.27.0",
     "framer-motion": "^4.1.17",
     "github-slugger": "^1.4.0",
     "match-sorter": "^6.3.1",
     "next": "^12.0.7",
     "next-contentlayer": "^0.0.33",
     "next-mdx-remote": "^3.0.2",
-    "next-pwa": "^5.2.21",
     "next-seo": "^4.28.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.0.0",
+    "@types/node": "^17.0.0",
     "@types/react": "^17.0.11",
     "@types/react-transition-group": "^4.4.4",
     "eslint": "^8.2.0",
