--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,7 @@
   "author": "Eelco Wiersma <eelco@appulse.nl>",
   "scripts": {
     "dev": "next dev --port 3020",
-    "build": "yarn contentlayer:build && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "prettify": "prettier --write src",
@@ -15,11 +15,10 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/props-docs": "^1.0.40",
-    "@chakra-ui/react": "^1.6.4",
+    "@chakra-ui/react": "^1.7.3",
     "@chakra-ui/skip-nav": "^1.2.1",
-    "@chakra-ui/system": "^1.8.3",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@fontsource/inter": "^4.4.5",
     "@mapbox/rehype-prism": "^0.7.0",
     "@mdx-js/loader": "^1.6.22",
@@ -28,7 +27,7 @@
     "@svgr/webpack": "^5.5.0",
     "contentlayer": "^0.0.33",
     "date-fns": "^2.27.0",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^4",
     "github-slugger": "^1.4.0",
     "match-sorter": "^6.3.1",
     "next": "^12.0.7",
@@ -38,7 +37,6 @@
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-feather": "^2.0.9",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.0",
     "react-live": "^2.3.0",
@@ -53,7 +51,7 @@
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.11",
     "@types/react-transition-group": "^4.4.4",
-    "eslint": "^8.2.0",
+    "eslint": "^8.4.1",
     "eslint-config-next": "^12.0.7",
     "prettier": "^2.3.2",
     "ts-node": "10.4.0",
