Check in yarn releases

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,13 @@
 # dependencies
 /node_modules
 **/node_modules
-.yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # testing
 /coverage
