--- a/package.json
+++ b/package.json
@@ -54,9 +54,15 @@
     "@storybook/addon-a11y": "^6.4.9",
     "@storybook/addon-toolbars": "^6.4.9",
     "@storybook/react": "^6.4.9",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
     "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "husky": "^7.0.4",
     "lint-staged": "^12.1.3",
     "microbundle": "^0.14.2",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
