--- a/packages/saas-ui-data-table/package.json
+++ b/packages/saas-ui-data-table/package.json
@@ -58,7 +58,7 @@
     "@chakra-ui/icons": "^2.0.2",
     "@chakra-ui/utils": "^2.0.2",
     "@saas-ui/layout": "workspace:*",
-    "react-table": "^7.8.0"
+    "@tanstack/react-table": "^8.2.6"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.1.0",
@@ -67,6 +67,6 @@
     "react": ">=18.0.0"
   },
   "devDependencies": {
-    "@types/react-table": "^7.7.12"
+    "@ngneat/falso": "^6.0.3"
   }
 }
