--- a/packages/saas-ui-date-picker/package.json
+++ b/packages/saas-ui-date-picker/package.json
@@ -52,17 +52,18 @@
   "dependencies": {
     "@chakra-ui/react-utils": "^2.0.3",
     "@chakra-ui/utils": "^2.0.2",
+    "@internationalized/date": "^3.0.1",
     "@react-aria/calendar": "^3.0.3",
     "@react-aria/datepicker": "^3.1.2",
     "@react-stately/calendar": "^3.0.3",
-    "@react-stately/datepicker": "^3.1.0",
-    "@internationalized/date": "^3.0.1"
+    "@react-stately/datepicker": "^3.1.0"
   },
   "peerDependencies": {
     "@chakra-ui/system": ">=2.0.0",
     "react": ">=18.0.0"
   },
   "devDependencies": {
-    "date-fns": "^2.28.0"
+    "date-fns": "^2.28.0",
+    "@react-types/datepicker": "^3.1.2"
   }
 }
