--- a/packages/saas-ui-date-picker/package.json
+++ b/packages/saas-ui-date-picker/package.json
@@ -55,6 +55,7 @@
     "@internationalized/date": "^3.0.1",
     "@react-aria/calendar": "^3.0.3",
     "@react-aria/datepicker": "^3.1.2",
+    "@react-aria/i18n": "^3.6.1",
     "@react-stately/calendar": "^3.0.3",
     "@react-stately/datepicker": "^3.1.0"
   },
@@ -63,7 +64,8 @@
     "react": ">=18.0.0"
   },
   "devDependencies": {
-    "date-fns": "^2.28.0",
-    "@react-types/datepicker": "^3.1.2"
+    "@react-types/datepicker": "^3.1.2",
+    "@saas-ui/forms": "workspace:*",
+    "date-fns": "^2.28.0"
   }
 }
