--- a/packages/saas-ui-date-picker/package.json
+++ b/packages/saas-ui-date-picker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/date-picker",
-  "version": "0.1.0",
+  "version": "0.6.0",
   "description": "Chakra UI - Date Picker Component",
   "source": "src/index.ts",
   "exports": {
@@ -50,21 +50,26 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.2",
     "@chakra-ui/react-utils": "^2.0.3",
+    "@chakra-ui/theme-tools": "^2.0.5",
     "@chakra-ui/utils": "^2.0.2",
     "@internationalized/date": "^3.0.1",
     "@react-aria/calendar": "^3.0.3",
     "@react-aria/datepicker": "^3.1.2",
     "@react-aria/i18n": "^3.6.1",
     "@react-stately/calendar": "^3.0.3",
-    "@react-stately/datepicker": "^3.1.0"
+    "@react-stately/datepicker": "^3.1.0",
+    "@saas-ui/modals": "workspace:*"
   },
   "peerDependencies": {
+    "@chakra-ui/react": ">=2.1.0",
     "@chakra-ui/system": ">=2.0.0",
     "react": ">=18.0.0"
   },
   "devDependencies": {
     "@react-types/datepicker": "^3.1.2",
+    "@saas-ui/card": "workspace:*",
     "@saas-ui/forms": "workspace:*",
     "date-fns": "^2.28.0"
   }
