--- a/packages/saas-ui-date-picker/package.json
+++ b/packages/saas-ui-date-picker/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@saas-ui/date-picker",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "Chakra UI - Date Picker Component",
   "source": "src/index.ts",
   "exports": {
-    "require": "./dist/index.js",
-    "default": "./dist/index.modern.js"
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.modern.js"
+    },
+    "./src": {
+      "default": "./src/index.ts"
+    }
   },
   "main": "./dist/index.js",
   "module": "./dist/index.modern.js",
