--- a/packages/saas-ui-auth/package.json
+++ b/packages/saas-ui-auth/package.json
@@ -82,6 +82,7 @@
     "@chakra-ui/react": ">=2.1.0",
     "@chakra-ui/system": ">=2.1.0",
     "framer-motion": ">=5.5.0",
-    "react": ">=18.0.0"
+    "react": ">=18.0.0",
+    "@supabase/supabase-js": "2.0.5"
   }
 }
