--- a/packages/saas-ui-list/package.json
+++ b/packages/saas-ui-list/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@saas-ui/list",
   "version": "1.3.0",
-  "description": "List Component for Chakra UI",
+  "description": "StructuredList Component for Chakra UI",
   "source": "src/index.ts",
   "exports": {
     ".": {
