--- a/packages/saas-ui-card/package.json
+++ b/packages/saas-ui-card/package.json
@@ -55,11 +55,10 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@chakra-ui/utils": "^2.0.12",
-    "@saas-ui/button": "workspace:*"
+    "@chakra-ui/utils": "^2.0.12"
   },
   "peerDependencies": {
-    "@chakra-ui/system": ">=2.1.0",
+    "@chakra-ui/react": ">=2.1.0",
     "react": ">=18.0.0"
   }
 }
