--- a/packages/saas-ui-input-right-button/package.json
+++ b/packages/saas-ui-input-right-button/package.json
@@ -56,8 +56,7 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@chakra-ui/utils": "^2.0.12",
-    "@saas-ui/button": "workspace:*"
+    "@chakra-ui/utils": "^2.0.12"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.1.0",
