feat: fix types

--- a/packages/saas-ui-banner/package.json
+++ b/packages/saas-ui-banner/package.json
@@ -55,14 +55,12 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@chakra-ui/close-button": "^2.0.12",
-    "@chakra-ui/hooks": "^2.1.2",
-    "@chakra-ui/icons": "^2.0.12",
+    "@chakra-ui/icons": "^2.0.16",
     "@chakra-ui/transition": "^2.0.12",
     "@chakra-ui/utils": "^2.0.12"
   },
   "peerDependencies": {
-    "@chakra-ui/system": ">=2.1.0",
+    "@chakra-ui/react": ">=2.1.0",
     "framer-motion": ">=5.5.0",
     "react": ">=18.0.0"
   }
