--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -81,6 +81,7 @@
     "@saas-ui/radio": "workspace:*",
     "@saas-ui/search-input": "workspace:*",
     "@saas-ui/select": "workspace:*",
+    "@saas-ui/sidebar": "workspace:*",
     "@saas-ui/snackbar": "workspace:*",
     "@saas-ui/stepper": "workspace:*",
     "@saas-ui/theme": "workspace:*"
