--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -10,27 +10,6 @@
     },
     "./src": {
       "default": "./src/index.ts"
-    },
-    "./yup": {
-      "require": "./dist/yup/index.js",
-      "import": "./dist/yup/index.modern.mjs"
-    },
-    "./yup/src": {
-      "default": "./yup/src/index.ts"
-    },
-    "./zod": {
-      "require": "./dist/zod/index.js",
-      "import": "./dist/zod/index.modern.mjs"
-    },
-    "./zod/src": {
-      "default": "./zod/src/index.ts"
-    },
-    "./ajv": {
-      "require": "./dist/ajv/index.js",
-      "import": "./dist/ajv/index.modern.mjs"
-    },
-    "./ajv/src": {
-      "default": "./ajv/src/index.ts"
     }
   },
   "main": "./dist/index.js",
@@ -38,24 +17,14 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rimraf --no-glob ./dist",
-    "build": "yarn build:package && yarn build:yup && yarn build:zod && yarn build:ajv",
-    "build:package": "yarn clean && cross-env NODE_ENV=production microbundle --tsconfig ./tsconfig.json --jsx React.createElement --jsxFragment React.Fragment -f cjs,modern --compress",
-    "build:yup": "cross-env NODE_ENV=production microbundle --cwd yup --tsconfig ./yup/tsconfig.json -f cjs,modern --compress",
-    "build:zod": "cross-env NODE_ENV=production microbundle --cwd zod --tsconfig ./zod/tsconfig.json -f cjs,modern --compress",
-    "build:ajv": "cross-env NODE_ENV=production microbundle --cwd ajv --tsconfig ./ajv/tsconfig.json -f cjs,modern --compress",
+    "build": "yarn clean && cross-env NODE_ENV=production microbundle --tsconfig ./tsconfig.json --jsx React.createElement --jsxFragment React.Fragment -f cjs,modern --compress",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx --config ../../.eslintrc.js",
     "lint:staged": "lint-staged --allow-empty --config ../../lint-staged.config.js",
     "typecheck": "tsc --noEmit"
   },
   "files": [
     "dist",
-    "src",
-    "yup/package.json",
-    "yup/src",
-    "zod/package.json",
-    "zod/src",
-    "ajv/package.json",
-    "ajv/src"
+    "src"
   ],
   "sideEffects": false,
   "publishConfig": {
@@ -92,7 +61,7 @@
     "@chakra-ui/icons": "^2.0.16",
     "@chakra-ui/react-utils": "^2.0.11",
     "@chakra-ui/utils": "^2.0.14",
-    "@hookform/resolvers": "^2.9.10",
+    "@saas-ui/form-resolvers": "workspace:*",
     "@saas-ui/input-right-button": "workspace:*",
     "@saas-ui/number-input": "workspace:*",
     "@saas-ui/password-input": "workspace:*",
