--- a/packages/saas-ui-form-resolvers/ajv/tsconfig.json
+++ b/packages/saas-ui-form-resolvers/ajv/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "../../../tsconfig.base.json",
   "include": ["./src"],
   "compilerOptions": {
+    "strictNullChecks": true,
     "baseUrl": ".",
     "paths": {
-      "@saas-ui/forms": ["../"]
+      "@saas-ui/form-resolvers": ["../"]
     }
   }
 }
