--- a/packages/saas-ui-form-resolvers/zod/tsconfig.json
+++ b/packages/saas-ui-form-resolvers/zod/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@saas-ui/forms": ["../"]
+      "@saas-ui/form-resolvers": ["../"]
     }
   }
 }
