--- a/packages/saas-ui-magic/package.json
+++ b/packages/saas-ui-magic/package.json
@@ -53,6 +53,9 @@
     "authentication",
     "magic.link"
   ],
+  "dependencies": {
+    "@saas-ui/auth": "^1.7.0"
+  },
   "storybook": {
     "title": "Saas UI",
     "url": "https://storybook.saas-ui.dev"
