--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -62,8 +62,8 @@
     "@chakra-ui/react-utils": "^2.0.11",
     "@chakra-ui/system": "^2.3.8",
     "@chakra-ui/utils": "^2.0.14",
-    "@saas-ui/theme": "workspace:*",
-    "@saas-ui/react-utils": "workspace:*"
+    "@saas-ui/react-utils": "workspace:*",
+    "@saas-ui/theme": "workspace:*"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.0",
