--- a/packages/saas-ui-forms/ajv/tsconfig.json
+++ b/packages/saas-ui-forms/ajv/tsconfig.json
@@ -3,6 +3,8 @@
   "include": ["./src"],
   "compilerOptions": {
     "strictNullChecks": true,
+    "declaration": false,
+    "declarationMap": false,
     "baseUrl": ".",
     "paths": {
       "@saas-ui/forms": ["../"]
