--- a/packages/saas-ui-data-table/package.json
+++ b/packages/saas-ui-data-table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/data-table",
-  "version": "1.4.1",
+  "version": "2.0.0-next.0",
   "description": "Data-table Component",
   "source": "src/index.ts",
   "exports": {
