--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/forms",
-  "version": "1.5.2",
+  "version": "2.0.0-next.0",
   "description": "Fully functional forms for Chakra UI.",
   "source": "src/index.ts",
   "exports": {
