--- a/packages/saas-ui-hooks/package.json
+++ b/packages/saas-ui-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/hooks",
-  "version": "1.2.0",
+  "version": "2.0.0-next.0",
   "description": "Saas UI react hooks",
   "source": "src/index.ts",
   "exports": {
