--- a/packages/saas-ui-palette/package.json
+++ b/packages/saas-ui-palette/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@saas-ui/palette",
   "description": "Color palette generator for Chakra UI",
-  "version": "1.3.0",
+  "version": "2.0.0-next.0",
   "source": "src/index.ts",
   "exports": {
     ".": {
