--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/react",
-  "version": "1.9.0",
+  "version": "2.0.0-next.0",
   "description": "Saas UI - The frontend stack for SaaS companies.",
   "source": "src/index.ts",
   "exports": {
