--- a/packages/saas-ui-theme/package.json
+++ b/packages/saas-ui-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/theme",
-  "version": "1.8.0",
+  "version": "2.0.0-next.0",
   "description": "Theme Component",
   "source": "src/index.ts",
   "exports": {
