--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -6,18 +6,18 @@
   "exports": {
     ".": {
       "require": "./dist/index.js",
-      "import": "./dist/index.modern.mjs"
+      "import": "./dist/index.mjs"
     },
     "./utils": {
       "require": "./dist/utils/index.js",
-      "import": "./dist/utils/index.modern.mjs"
+      "import": "./dist/utils/index.mjs"
     },
     "./src": {
       "default": "./src/index.ts"
     }
   },
   "main": "./dist/index.js",
-  "module": "./dist/index.modern.mjs",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rimraf --no-glob ./dist",
