chore: fix esm bundle filename

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "changelog:commit": "git add CHANGELOG.md && git commit -am 'docs: add changelog' && git push",
     "changeset:next": "yarn changeset pre enter next",
     "version": "yarn changelog:gen && changeset version",
-    "publish:next": "yarn workspaces foreach --from '@saas-ui/*' npm publish --access public --tag next",
+    "publish:next": "yarn workspaces foreach --from '@saas-ui/*' --exclude '@saas-ui/pro' npm publish --access public --tag next",
     "publish": "yarn workspaces foreach -p --from '@saas-ui/*' --exclude '@saas-ui/pro' npm publish && yarn changeset tag",
     "storybook": "start-storybook -p 6006",
     "build:storybook": "build-storybook && sb extract",
