--- a/apps/palette/package.json
+++ b/apps/palette/package.json
@@ -1,6 +1,6 @@
 {
   "name": "palette-docs",
-  "version": "1.3.6",
+  "version": "1.3.7-next.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
