--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "apps/*",
     "tooling/next-workspaces",
     "tooling/test-utils",
-    "tooling/props-docs"
+    "tooling/props-docs",
+    "tooling/storybook-addon"
   ],
   "devDependencies": {
     "@babel/core": "^7.20.2",
@@ -76,6 +77,7 @@
     "@emotion/styled": "^11.10.5",
     "@jest/types": "^28.1.3",
     "@manypkg/get-packages": "^1.1.3",
+    "@saas-ui/storybook-addon": "workspace:*",
     "@storybook/addon-a11y": "^6.5.13",
     "@storybook/addon-storysource": "^6.5.13",
     "@storybook/addon-toolbars": "^6.5.13",
