--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -76,7 +76,8 @@
     "@chakra-ui/system": "^2.3.8",
     "@chakra-ui/theme-tools": "^2.0.16",
     "@chakra-ui/utils": "^2.0.14",
-    "@saas-ui/react-utils": "workspace:*"
+    "@saas-ui/react-utils": "workspace:*",
+    "@saas-ui/theme": "workspace:*"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.0",
