--- a/tooling/storybook-addon/package.json
+++ b/tooling/storybook-addon/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist",
     "theming-arg-types.png"
