--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -2,8 +2,8 @@
   "name": "saas-ui-storybook",
   "type": "module",
   "scripts": {
-    "dev": "storybook dev -p 6006",
-    "build": "storybook build && storybook extract"
+    "dev": "storybook dev -p 6006 --debug --loglevel verbose",
+    "build": "storybook build --debug --loglevel verbose && storybook extract"
   },
   "dependencies": {
     "@babel/core": "^7.20.2",
@@ -16,17 +16,16 @@
     "@emotion/styled": "^11.10.5",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/storybook-addon": "workspace:*",
-    "@storybook/addon-a11y": "^7.0.0-beta.43",
-    "@storybook/addon-storysource": "^7.0.0-beta.43",
-    "@storybook/addon-toolbars": "^7.0.0-beta.43",
-    "@storybook/addon-viewport": "^7.0.0-beta.43",
-    "@storybook/addons": "^7.0.0-beta.43",
-    "@storybook/cli": "^7.0.0-beta.43",
-    "@storybook/client-api": "^7.0.0-beta.43",
-    "@storybook/preview-web": "^7.0.0-beta.43",
-    "@storybook/react": "^7.0.0-beta.43",
-    "@storybook/react-vite": "^7.0.0-alpha.25",
-    "@storybook/react-webpack5": "^7.0.0-beta.43",
+    "@storybook/addon-a11y": "^7.0.0-rc.1",
+    "@storybook/addon-storysource": "^7.0.0-rc.1",
+    "@storybook/addon-toolbars": "^7.0.0-rc.1",
+    "@storybook/addon-viewport": "^7.0.0-rc.1",
+    "@storybook/addons": "^7.0.0-rc.1",
+    "@storybook/cli": "^7.0.0-rc.1",
+    "@storybook/client-api": "^7.0.0-rc.1",
+    "@storybook/preview-web": "^7.0.0-rc.1",
+    "@storybook/react": "^7.0.0-rc.1",
+    "@storybook/react-vite": "^7.0.0-rc.1",
     "@storybook/testing-react": "^2.0.0-next.0",
     "@swc/core": "^1.3.32",
     "vite": "^4.1.1"
