--- a/tooling/storybook-addon/package.json
+++ b/tooling/storybook-addon/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist",
     "theming-arg-types.png"
@@ -75,17 +76,17 @@
     "@chakra-ui/react": "^2.5.1",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/theme-glass": "workspace:*",
-    "@storybook/addons": "^6.5.6",
-    "@storybook/api": "^6.5.6",
-    "@storybook/components": "^6.5.6",
+    "@storybook/addons": "^7.0.0-rc.1",
+    "@storybook/api": "^7.0.0-rc.1",
+    "@storybook/components": "^7.0.0-rc.1",
     "react": "^18.0.0",
     "tsup": "^6.6.3"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.0.0",
-    "@storybook/addons": ">=6.4",
-    "@storybook/api": ">=6.4",
-    "@storybook/components": ">=6.4",
+    "@storybook/addons": ">=7",
+    "@storybook/api": ">=7",
+    "@storybook/components": ">=7",
     "react": ">=16.8.x"
   },
   "peerDependenciesMeta": {
