--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@jest/types": "^28.1.3",
     "@manypkg/get-packages": "^1.1.3",
     "@swc-node/jest": "^1.5.5",
+    "@swc/core": "^1.3.42",
     "@types/node": "^17.0.45",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
