--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "@chakra-ui/react-utils": "^2.0.11",
+    "@chakra-ui/styled-system": "^2.6.2",
     "@chakra-ui/system": "^2.3.8",
     "@chakra-ui/theme-tools": "^2.0.16",
     "@chakra-ui/utils": "^2.0.14",
