--- a/packages/saas-ui-theme-glass/package.json
+++ b/packages/saas-ui-theme-glass/package.json
@@ -64,7 +64,11 @@
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.6",
     "@chakra-ui/system": ">=2.3.8",
-    "react": ">=18.0.0"
+    "@emotion/react": ">=11.1.5",
+    "@emotion/styled": ">=11.1.5",
+    "framer-motion": ">=4.1.17",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "devDependencies": {
     "@saas-ui/react": "workspace:*",
