--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -16,18 +16,25 @@
     "@emotion/styled": "^11.10.5",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/storybook-addon": "workspace:*",
-    "@storybook/addon-a11y": "^7.0.0-rc.1",
-    "@storybook/addon-storysource": "^7.0.0-rc.1",
-    "@storybook/addon-toolbars": "^7.0.0-rc.1",
-    "@storybook/addon-viewport": "^7.0.0-rc.1",
-    "@storybook/addons": "^7.0.0-rc.1",
-    "@storybook/cli": "^7.0.0-rc.1",
-    "@storybook/client-api": "^7.0.0-rc.1",
-    "@storybook/preview-web": "^7.0.0-rc.1",
-    "@storybook/react": "^7.0.0-rc.1",
-    "@storybook/react-vite": "^7.0.0-rc.1",
+    "@storybook/addon-a11y": "^7.0.0-rc.6",
+    "@storybook/addon-storysource": "^7.0.0-rc.6",
+    "@storybook/addon-toolbars": "^7.0.0-rc.6",
+    "@storybook/addon-viewport": "^7.0.0-rc.6",
+    "@storybook/addons": "^7.0.0-rc.6",
+    "@storybook/cli": "^7.0.0-rc.6",
+    "@storybook/client-api": "^7.0.0-rc.6",
+    "@storybook/client-logger": "7.0.0-rc.6",
+    "@storybook/preview-api": "7.0.0-rc.6",
+    "@storybook/preview-web": "^7.0.0-rc.6",
+    "@storybook/react": "^7.0.0-rc.6",
+    "@storybook/react-vite": "^7.0.0-rc.6",
     "@storybook/testing-react": "^2.0.0-next.0",
+    "@storybook/types": "^7.0.0-rc.6",
     "@swc/core": "^1.3.32",
+    "framer-motion": "^10.8.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.5.2",
     "vite": "^4.1.1"
   }
 }
