--- a/tooling/storybook-addon/package.json
+++ b/tooling/storybook-addon/package.json
@@ -74,12 +74,17 @@
   "homepage": "https://github.com/saas-ui/saas-ui#readme",
   "devDependencies": {
     "@chakra-ui/react": "^2.5.1",
+    "@chakra-ui/system": ">=2.3.8",
+    "@emotion/react": ">=11.1.5",
+    "@emotion/styled": ">=11.1.5",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/theme-glass": "workspace:*",
-    "@storybook/addons": "^7.0.0-rc.1",
-    "@storybook/api": "^7.0.0-rc.1",
-    "@storybook/components": "^7.0.0-rc.1",
+    "@storybook/addons": "^7.0.0-rc.6",
+    "@storybook/api": "^7.0.0-rc.6",
+    "@storybook/components": "^7.0.0-rc.6",
+    "framer-motion": ">=4.1.17",
     "react": "^18.0.0",
+    "react-dom": ">=18.0.0",
     "tsup": "^6.6.3"
   },
   "peerDependencies": {
