--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -15,10 +15,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@chakra-ui/props-docs": "^2.0.31",
-    "@chakra-ui/react": "^2.4.9",
-    "@chakra-ui/skip-nav": "^2.0.13",
-    "@chakra-ui/system": "^2.3.8",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/props-docs": "^2.2.1",
+    "@chakra-ui/react": "^2.5.3",
+    "@chakra-ui/skip-nav": "^2.0.15",
+    "@chakra-ui/system": "^2.5.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/inter": "^4.5.14",
@@ -47,7 +48,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-intersection-observer": "^9.4.1",
-    "react-live": "^2.4.1",
+    "react-live-runner": "^1.0.5",
     "react-markdown": "^8.0.3",
     "reading-time": "^1.5.0",
     "remark-code-titles": "^0.1.2",
