--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -2,8 +2,8 @@
   "name": "saas-ui-storybook",
   "type": "module",
   "scripts": {
-    "dev": "storybook dev -p 6006 --debug --loglevel verbose",
-    "build": "storybook build --debug --loglevel verbose && storybook extract"
+    "dev": "sb dev -p 6006",
+    "build": "sb build --debug --loglevel verbose && storybook extract"
   },
   "dependencies": {
     "@babel/core": "^7.20.2",
@@ -16,20 +16,20 @@
     "@emotion/styled": "^11.10.5",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/storybook-addon": "workspace:*",
-    "@storybook/addon-a11y": "^7.0.0-rc.6",
-    "@storybook/addon-storysource": "^7.0.0-rc.6",
-    "@storybook/addon-toolbars": "^7.0.0-rc.6",
-    "@storybook/addon-viewport": "^7.0.0-rc.6",
-    "@storybook/addons": "^7.0.0-rc.6",
-    "@storybook/cli": "^7.0.0-rc.6",
-    "@storybook/client-api": "^7.0.0-rc.6",
-    "@storybook/client-logger": "7.0.0-rc.6",
-    "@storybook/preview-api": "7.0.0-rc.6",
-    "@storybook/preview-web": "^7.0.0-rc.6",
-    "@storybook/react": "^7.0.0-rc.6",
-    "@storybook/react-vite": "^7.0.0-rc.6",
+    "@storybook/addon-a11y": "^7.0.0-rc.7",
+    "@storybook/addon-storysource": "^7.0.0-rc.7",
+    "@storybook/addon-toolbars": "^7.0.0-rc.7",
+    "@storybook/addon-viewport": "^7.0.0-rc.7",
+    "@storybook/addons": "^7.0.0-rc.7",
+    "@storybook/cli": "^7.0.0-rc.7",
+    "@storybook/client-api": "^7.0.0-rc.7",
+    "@storybook/client-logger": "7.0.0-rc.7",
+    "@storybook/preview-api": "7.0.0-rc.7",
+    "@storybook/preview-web": "^7.0.0-rc.7",
+    "@storybook/react": "^7.0.0-rc.7",
+    "@storybook/react-vite": "^7.0.0-rc.7",
     "@storybook/testing-react": "^2.0.0-next.0",
-    "@storybook/types": "^7.0.0-rc.6",
+    "@storybook/types": "^7.0.0-rc.7",
     "@swc/core": "^1.3.32",
     "framer-motion": "^10.8.5",
     "react": "^18.2.0",
