--- a/packages/saas-ui-theme/package.json
+++ b/packages/saas-ui-theme/package.json
@@ -10,6 +10,13 @@
     },
     "./src": {
       "default": "./src/index.ts"
+    },
+    "./anatomy": {
+      "require": "./dist/anatomy.js",
+      "import": "./dist/anatomy.mjs"
+    },
+    "./anatomy/src": {
+      "default": "./src/anatomy/index.ts"
     }
   },
   "main": "./dist/index.js",
@@ -17,7 +24,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rimraf --no-glob ./dist",
-    "build": "tsup src/index.ts --config tsup.config.ts",
+    "build": "tsup src/index.ts src/anatomy/index.ts --config tsup.config.ts",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx --config ../../.eslintrc.js",
     "lint:staged": "lint-staged --allow-empty --config ../../lint-staged.config.js",
     "typecheck": "tsc --noEmit"
