--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "version": "2.0.0-next.4",
+  "version": "2.0.0-next.5",
   "private": true,
   "author": "Eelco Wiersma <eelco@appulse.nl>",
   "scripts": {
@@ -66,7 +66,7 @@
     "typescript": "^4.9.3"
   },
   "optionalDependencies": {
-    "@saas-ui/features": "1.0.0-next.0",
-    "@saas-ui/pro": "1.0.0-next.0"
+    "@saas-ui/features": "workspace:*",
+    "@saas-ui/pro": "workspace:*"
   }
 }
