--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
   "workspaces": [
     "packages/storybook",
     "packages/saas-ui-*",
-    "packages/pro/saas-ui/*",
     "apps/*",
     "tooling/next-workspaces",
     "tooling/test-utils",
@@ -110,7 +109,9 @@
   },
   "resolutions": {
     "unist-util-visit": "4.0.0",
-    "react-hook-form": "7.43.0"
+    "@chakra-ui/system": "2.5.5",
+    "@chakra-ui/theme": "2.3.0",
+    "@chakra-ui/react": "2.5.5"
   },
   "packageManager": "yarn@3.3.0"
 }
