--- a/packages/saas-ui-forms/ajv/package.json
+++ b/packages/saas-ui-forms/ajv/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^3.0.0",
     "react-hook-form": "^7.43.9",
     "ajv": "^8.12.0",
-    "ajv-errors": "^3.0.0"
+    "ajv-errors": "^3.0.0",
+    "json-schema-to-ts": "^2.7.2"
   }
 }
