--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -104,6 +104,7 @@
     "@types/json-schema": "^7.0.11",
     "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
+    "json-schema-to-ts": "^2.7.2",
     "yup": "^1.0.2",
     "zod": "^3.21.4"
   }
