--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "workspaces": [
     "packages/storybook",
+    "packages/pro/saas-ui/*",
     "packages/saas-ui-*",
     "apps/*",
     "tooling/next-workspaces",
@@ -65,53 +66,58 @@
   "devDependencies": {
     "@chakra-ui/cli": "^2.3.1",
     "@chakra-ui/react": "^2.5.5",
-    "@changesets/cli": "^2.25.2",
+    "@changesets/cli": "^2.26.1",
     "@clerk/clerk-react": "^3.5.1",
     "@emotion/jest": "^11.10.5",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@jest/types": "^28.1.3",
-    "@manypkg/get-packages": "^1.1.3",
-    "@swc-node/jest": "^1.5.5",
-    "@swc/core": "^1.3.42",
-    "@types/node": "^17.0.45",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@jest/types": "^29.5.0",
+    "@manypkg/get-packages": "^2.1.0",
+    "@swc-node/jest": "^1.6.3",
+    "@swc/core": "^1.3.46",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "browserslist": "^4.21.5",
     "cross-env": "^7.0.3",
     "date-fns": "^2.29.3",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-storybook": "^0.6.7",
-    "framer-motion": "^6.5.1",
-    "husky": "^8.0.2",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-storybook": "^0.6.11",
+    "framer-motion": "^10.10.0",
+    "husky": "^8.0.3",
     "hygen": "^6.2.11",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "jest-watch-typeahead": "^1.1.0",
-    "lint-staged": "^13.0.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "lint-staged": "^13.2.0",
     "lodash": "^4.17.21",
-    "prettier": "^2.7.1",
+    "node-releases": "^2.0.10",
+    "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.8.0",
     "react-is": "^18.2.0",
     "react-test-renderer": "^18.2.0",
-    "rimraf": "^3.0.2",
+    "rimraf": "^4.4.1",
     "ts-node": "^10.9.1",
-    "tsup": "^6.5.0",
-    "turbo": "^1.6.3",
-    "typescript": "^4.9.3",
-    "vercel-submodules": "^1.0.6",
-    "yup": "^0.32.11",
-    "zod": "^3.20.2"
+    "tsup": "^6.7.0",
+    "turbo": "^1.8.8",
+    "typescript": "^4.9.5",
+    "vercel-submodules": "^1.0.10",
+    "yup": "^1.0.2",
+    "zod": "^3.21.4"
   },
   "resolutions": {
     "unist-util-visit": "4.0.0",
-    "@chakra-ui/system": "2.5.5",
-    "@chakra-ui/theme": "2.3.0",
-    "@chakra-ui/react": "2.5.5"
+    "@babel/preset-env": "7.21.4",
+    "browserslist": "4.21.5",
+    "caniuse-lite": "1.0.30001400",
+    "electron-to-chromium": "1.4.251",
+    "node-releases": "2.0.6",
+    "update-browserslist-db": "1.0.9"
   },
   "packageManager": "yarn@3.3.0"
 }
