--- a/tooling/storybook-addon/package.json
+++ b/tooling/storybook-addon/package.json
@@ -79,13 +79,13 @@
     "@emotion/styled": ">=11.1.5",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/theme-glass": "workspace:*",
-    "@storybook/addons": "^7.0.0-rc.6",
-    "@storybook/api": "^7.0.0-rc.6",
-    "@storybook/components": "^7.0.0-rc.6",
+    "@storybook/addons": "^7.0.2",
+    "@storybook/api": "^7.0.2",
+    "@storybook/components": "^7.0.2",
     "framer-motion": ">=4.1.17",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-dom": ">=18.0.0",
-    "tsup": "^6.6.3"
+    "tsup": "^6.7.0"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.0.0",
