--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -48,7 +48,8 @@
     "build:ajv": "tsup ajv/src/index.ts --config ajv/tsup.config.ts",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx --config ../../.eslintrc.js",
     "lint:staged": "lint-staged --allow-empty --config ../../lint-staged.config.js",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "tsd": "tsd"
   },
   "files": [
     "dist",
@@ -105,7 +106,11 @@
     "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
     "json-schema-to-ts": "^2.7.2",
+    "tsd": "^0.28.1",
     "yup": "^1.0.2",
     "zod": "^3.21.4"
+  },
+  "tsd": {
+    "directory": "tests"
   }
 }
