--- a/package.json
+++ b/package.json
@@ -66,13 +66,13 @@
   "devDependencies": {
     "@chakra-ui/cli": "^2.3.1",
     "@chakra-ui/react": "^2.5.5",
-    "@changesets/cli": "^2.26.1",
+    "@changesets/cli": "^2.25.2",
     "@clerk/clerk-react": "^3.5.1",
     "@emotion/jest": "^11.10.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@jest/types": "^29.5.0",
-    "@manypkg/get-packages": "^2.1.0",
+    "@manypkg/get-packages": "^1.1.3",
     "@swc-node/jest": "^1.6.3",
     "@swc/core": "^1.3.46",
     "@types/node": "^18.15.11",
@@ -111,13 +111,7 @@
     "zod": "^3.21.4"
   },
   "resolutions": {
-    "unist-util-visit": "4.0.0",
-    "@babel/preset-env": "7.21.4",
-    "browserslist": "4.21.5",
-    "caniuse-lite": "1.0.30001400",
-    "electron-to-chromium": "1.4.251",
-    "node-releases": "2.0.6",
-    "update-browserslist-db": "1.0.9"
+    "unist-util-visit": "4.0.0"
   },
   "packageManager": "yarn@3.3.0"
 }
