--- a/packages/saas-ui-theme/package.json
+++ b/packages/saas-ui-theme/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@saas-ui/theme",
   "version": "2.0.0-next.3",
-  "description": "Theme Component",
+  "description": "Saas UI theme package",
   "source": "src/index.ts",
   "exports": {
     ".": {
       "require": "./dist/index.js",
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs"
     },
     "./src": {
@@ -13,6 +14,7 @@
     },
     "./anatomy": {
       "require": "./dist/anatomy.js",
+      "types": "./dist/anatomy.d.ts",
       "import": "./dist/anatomy.mjs"
     },
     "./anatomy/src": {
@@ -49,6 +51,7 @@
     "react",
     "ui",
     "chakra-ui",
+    "theme",
     "design-system",
     "react-components",
     "uikit",
