--- a/packages/saas-ui-modals/package.json
+++ b/packages/saas-ui-modals/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "@chakra-ui/utils": "^2.0.15",
+    "@chakra-ui/react-utils": "^2.0.11",
     "@saas-ui/forms": "workspace:*",
     "@saas-ui/hooks": "workspace:*",
     "@saas-ui/react-utils": "workspace:*"
