--- a/packages/saas-ui-theme/package.json
+++ b/packages/saas-ui-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/theme",
-  "version": "2.0.0-next.4",
+  "version": "2.0.0-next.5",
   "description": "Saas UI theme package",
   "source": "src/index.ts",
   "exports": {
@@ -19,6 +19,13 @@
     },
     "./anatomy/src": {
       "default": "./src/anatomy/index.ts"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "anatomy": [
+        "./dist/anatomy.d.ts"
+      ]
     }
   },
   "main": "./dist/index.js",
