--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -5,6 +5,7 @@
   "author": "Eelco Wiersma <eelco@appulse.nl>",
   "scripts": {
     "dev": "next dev --port 3020",
+    "dev:contentlayer": "contentlayer dev",
     "build": "yarn gen:contentlayer && next build",
     "start": "next start",
     "lint": "next lint",
@@ -31,16 +32,17 @@
     "@saas-ui/palette": "workspace:*",
     "@saas-ui/props-docs": "workspace:*",
     "@saas-ui/react": "workspace:*",
+    "@saas-ui/forms": "workspace:*",
     "@svgr/webpack": "^5.5.0",
     "@vercel/og": "^0.5.0",
     "canvas-confetti": "^1.6.0",
-    "contentlayer": "^0.3.1",
+    "contentlayer": "^0.3.2",
     "date-fns": "^2.29.3",
     "framer-motion": "^10.10.0",
     "github-slugger": "^2.0.0",
     "match-sorter": "^6.3.1",
-    "next": "^13.2.4",
-    "next-contentlayer": "^0.3.1",
+    "next": "^13.3.1",
+    "next-contentlayer": "^0.3.2",
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^6.0.0",
     "prism-react-renderer": "^1.3.5",
@@ -55,7 +57,8 @@
     "remark-emoji": "^3.1.1",
     "remark-gfm": "^3.0.1",
     "remark-slug": "^7.0.1",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.33.0",
@@ -67,7 +70,7 @@
     "typescript": "^4.9.5"
   },
   "optionalDependencies": {
-    "@saas-ui/features": "workspace:*",
-    "@saas-ui/pro": "workspace:*"
+    "@saas-ui-pro/feature-flags": "workspace:*",
+    "@saas-ui-pro/react": "workspace:*"
   }
 }
