--- a/packages/saas-ui-hooks/package.json
+++ b/packages/saas-ui-hooks/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@saas-ui/hooks",
-  "version": "2.0.0-next.2",
+  "version": "2.0.0-next.4",
   "description": "Saas UI react hooks",
   "source": "src/index.ts",
   "exports": {
     ".": {
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.modern.mjs"
+      "import": "./dist/index.mjs"
     },
     "./src": {
       "default": "./src/index.ts"
