--- a/packages/saas-ui-modals/package.json
+++ b/packages/saas-ui-modals/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@saas-ui/modals",
-  "version": "2.0.0-next.12",
+  "version": "2.0.0-next.14",
   "description": "A modal manager for Chakra UI",
   "source": "src/index.ts",
   "exports": {
     ".": {
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.modern.mjs"
+      "import": "./dist/index.mjs"
     },
     "./src": {
       "default": "./src/index.ts"
