--- a/packages/saas-ui-nprogress/package.json
+++ b/packages/saas-ui-nprogress/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@saas-ui/nprogress",
-  "version": "2.0.0-next.1",
+  "version": "2.0.0-next.3",
   "description": "Nprogress Component",
   "source": "src/index.ts",
   "exports": {
     ".": {
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.modern.mjs"
+      "import": "./dist/index.mjs"
     },
     "./src": {
       "default": "./src/index.ts"
