--- a/packages/saas-ui-supabase/package.json
+++ b/packages/saas-ui-supabase/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@saas-ui/supabase",
-  "version": "2.0.0-next.1",
+  "version": "2.0.0-next.3",
   "description": "Saas UI Supabase integration",
   "source": "src/index.ts",
   "exports": {
     ".": {
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.modern.mjs"
+      "import": "./dist/index.mjs"
     },
     "./src": {
       "default": "./src/index.ts"
@@ -59,7 +59,7 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@saas-ui/auth": "^2.0.0-next.1"
+    "@saas-ui/auth": "^2.0.0-next.14"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.9",
