--- a/packages/saas-ui-theme-glass/package.json
+++ b/packages/saas-ui-theme-glass/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@saas-ui/theme-glass",
-  "version": "0.3.2-next.1",
+  "version": "0.3.2-next.3",
   "description": "A Linear inspired Chakra UI theme",
   "source": "src/index.ts",
   "exports": {
     ".": {
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.modern.mjs"
+      "import": "./dist/index.mjs"
     },
     "./src": {
       "default": "./src/index.ts"
