--- a/tooling/props-docs/package.json
+++ b/tooling/props-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/props-docs",
-  "version": "1.8.0",
+  "version": "1.8.1-next.1",
   "description": "Extracts prop types for documentation purposes",
   "keywords": [
     "docs",
