--- a/package.json
+++ b/package.json
@@ -116,8 +116,5 @@
     "unist-util-visit": "4.0.0",
     "react": "18.2.0"
   },
-  "packageManager": "yarn@3.3.0",
-  "dependencies": {
-    "lost-pixel": "^3.4.0"
-  }
+  "packageManager": "yarn@3.3.0"
 }
