--- a/packages/saas-ui-clerk/package.json
+++ b/packages/saas-ui-clerk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/clerk",
-  "version": "3.0.0-next.22",
+  "version": "3.0.0-rc.24",
   "description": "Clerk Authentication Service for Saas UI",
   "source": "src/index.ts",
   "exports": {
