--- a/packages/saas-ui-date-picker/package.json
+++ b/packages/saas-ui-date-picker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/date-picker",
-  "version": "0.10.0-next.5",
+  "version": "0.10.0-rc.7",
   "description": "Chakra UI - Date Picker Component",
   "source": "src/index.ts",
   "exports": {
