--- a/packages/saas-ui-hooks/package.json
+++ b/packages/saas-ui-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/hooks",
-  "version": "2.0.0-next.4",
+  "version": "2.0.0-rc.5",
   "description": "Saas UI react hooks",
   "source": "src/index.ts",
   "exports": {
