--- a/packages/saas-ui-hotkeys/package.json
+++ b/packages/saas-ui-hotkeys/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/hotkeys",
-  "version": "2.0.0-next.19",
+  "version": "2.0.0-rc.21",
   "description": "Easy manageable keyboard shortcuts for Chakra UI",
   "source": "src/index.ts",
   "exports": {
