--- a/packages/saas-ui-magic/package.json
+++ b/packages/saas-ui-magic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/magic",
-  "version": "2.0.0-next.4",
+  "version": "2.0.0-rc.5",
   "description": "Saas UI Magic.link integration",
   "source": "src/index.ts",
   "exports": {
@@ -55,7 +55,7 @@
     "magic.link"
   ],
   "dependencies": {
-    "@saas-ui/auth": "^2.0.0-next.20"
+    "@saas-ui/auth": "^2.0.0-rc.24"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.9",
