--- a/packages/saas-ui-react-utils/package.json
+++ b/packages/saas-ui-react-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/react-utils",
-  "version": "2.0.0-next.3",
+  "version": "2.0.0-rc.4",
   "description": "React utilities and helpers for Chakra UI",
   "source": "src/index.ts",
   "exports": {
