--- a/packages/saas-ui-supabase/package.json
+++ b/packages/saas-ui-supabase/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/supabase",
-  "version": "2.0.0-next.3",
+  "version": "2.0.0-rc.4",
   "description": "Saas UI Supabase integration",
   "source": "src/index.ts",
   "exports": {
@@ -59,7 +59,7 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@saas-ui/auth": "^2.0.0-next.14"
+    "@saas-ui/auth": "^2.0.0-rc.24"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.9",
