--- a/packages/saas-ui-system/package.json
+++ b/packages/saas-ui-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/system",
-  "version": "2.0.0-next.3",
+  "version": "2.0.0-rc.4",
   "description": "Saas UI system utilities",
   "source": "src/index.ts",
   "exports": {
