--- a/packages/saas-ui-theme-glass/package.json
+++ b/packages/saas-ui-theme-glass/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/theme-glass",
-  "version": "0.3.2-next.3",
+  "version": "0.3.2-rc.4",
   "description": "A Linear inspired Chakra UI theme",
   "source": "src/index.ts",
   "exports": {
