--- a/packages/saas-ui-theme/package.json
+++ b/packages/saas-ui-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/theme",
-  "version": "2.0.0-next.11",
+  "version": "2.0.0-rc.13",
   "description": "Saas UI theme package",
   "source": "src/index.ts",
   "exports": {
